src/objects/OP__c.object
<CustomObject>
    <description>Master Ono Operation</description>
    <fields>
        <fullName>Field1__c</fullName>
        <inlineHelpText>関連名</inlineHelpText>
        <label>カテゴリ</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>非公開</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPcode1__c</fullName>
        <externalId>true</externalId>
        <label>リンクOPコード</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>会計OP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OPcode1__c</columns>
        <columns>Field1__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>会計OP名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>